IMPLEMENTED SINGLE RESPONSIBILITY PRINCIPLE (SOLID) VIA FACTORY DESIGN
- Created BrickType.java enum to hold essentially letters representing Brick-shape-classes.

- Created superclass AbstractBrick.java to make Brick-shape-classes more cohesive by taking out the getShapeMatrix() method and putting it into AbstractBrick.

- Created BrickFactory.java to create Brick-shape-objects cleanly and return said object to caller method in RandomBrickGenerator.java